[package]
name = "force-ansi"
authors = ["29 <791603901@qq.com>"]
version = "0.0.1"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["cli", "terminal", "process"]
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]
repository = "https://github.com/opensound-org/force-ansi"
homepage = "https://github.com/opensound-org/force-ansi"
description = """
A command-line wrapper program that can force ANSI code to be enabled in the Windows console.
"""
edition = "2021"
default-run = "force-ansi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because the MSRV of the dependency `tracing` is 1.63.0
# 因为依赖项`tracing`的MSRV是1.63.0
rust-version = "1.63.0"

[dependencies]

[dev-dependencies]
