[package]
name = "force-ansi"
authors = ["29 <791603901@qq.com>"]
version = "1.0.1"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["cli", "terminal", "process"]
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]
repository = "https://github.com/opensound-org/force-ansi"
homepage = "https://github.com/opensound-org/force-ansi"
description = """
A command-line wrapper program that can force ANSI code to be enabled in the Windows console.
"""
edition = "2021"
default-run = "force-ansi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Because the MSRV of the dependency `tracing` is 1.65.0
# 因为依赖项`tracing`的MSRV是1.65.0
rust-version = "1.65.0"

[dependencies]
nu-ansi-term = "0.50.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["chrono"] }

[dev-dependencies]
